# mimic

./: .gitignore  .gitmodules  .ninja_deps  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  rules.ninja
common/: CMakeLists.txt
common/include/: window.hpp
common/src/: window.cpp
game/: CMakeLists.txt  cmake_install.cmake  game.cpp
